target/generated-sources/antlr4/DelphiParser.java
// Generated from Delphi.g4 by ANTLR 4.13.1

package com.compiler.delphi;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DelphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ARRAY=2, BEGIN=3, BOOLEAN=4, CASE=5, CHAR=6, CHR=7, CONST=8, DIV=9, 
		DO=10, DOWNTO=11, ELSE=12, END=13, FILE=14, FOR=15, FUNCTION=16, GOTO=17, 
		IF=18, IN=19, INTEGER=20, LABEL=21, MOD=22, NIL=23, NOT=24, OF=25, OR=26, 
		PACKED=27, PROCEDURE=28, PROGRAM=29, REAL=30, RECORD=31, REPEAT=32, SET=33, 
		THEN=34, TO=35, TYPE=36, UNTIL=37, VAR=38, WHILE=39, WITH=40, CLASS=41, 
		PRIVATE=42, PUBLIC=43, PROTECTED=44, CONSTRUCTOR=45, DESTRUCTOR=46, INHERITS=47, 
		PLUS=48, MINUS=49, STAR=50, SLASH=51, ASSIGN=52, COMMA=53, SEMI=54, COLON=55, 
		EQUAL=56, NOT_EQUAL=57, LT=58, LE=59, GE=60, GT=61, LPAREN=62, RPAREN=63, 
		LBRACK=64, LBRACK2=65, RBRACK=66, RBRACK2=67, POINTER=68, AT=69, DOT=70, 
		DOTDOT=71, LCURLY=72, RCURLY=73, UNIT=74, INTERFACE=75, USES=76, STRING=77, 
		IMPLEMENTATION=78, TRUE=79, FALSE=80, WS=81, COMMENT_1=82, COMMENT_2=83, 
		IDENT=84, STRING_LITERAL=85, NUM_INT=86, NUM_REAL=87;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_programHeading = 2, RULE_identifier = 3, 
		RULE_block = 4, RULE_classDeclarationPart = 5, RULE_className = 6, RULE_visibilityBlock = 7, 
		RULE_baseClassName = 8, RULE_classBlock = 9, RULE_visibilitySection = 10, 
		RULE_visibility = 11, RULE_classVarDeclaration = 12, RULE_methodBlock = 13, 
		RULE_methodDeclaration = 14, RULE_constructorDeclaration = 15, RULE_destructorDeclaration = 16, 
		RULE_classMethodDeclaration = 17, RULE_classMethodImplementation = 18, 
		RULE_constructorImplementation = 19, RULE_destructorImplementation = 20, 
		RULE_methodImplementation = 21, RULE_usesUnitsPart = 22, RULE_labelDeclarationPart = 23, 
		RULE_label = 24, RULE_constantDefinitionPart = 25, RULE_constantDefinition = 26, 
		RULE_constantChr = 27, RULE_constant = 28, RULE_unsignedNumber = 29, RULE_unsignedInteger = 30, 
		RULE_unsignedReal = 31, RULE_sign = 32, RULE_bool_ = 33, RULE_string = 34, 
		RULE_typeDefinitionPart = 35, RULE_typeDefinition = 36, RULE_functionType = 37, 
		RULE_procedureType = 38, RULE_type_ = 39, RULE_simpleType = 40, RULE_scalarType = 41, 
		RULE_subrangeType = 42, RULE_typeIdentifier = 43, RULE_structuredType = 44, 
		RULE_unpackedStructuredType = 45, RULE_stringtype = 46, RULE_arrayType = 47, 
		RULE_typeList = 48, RULE_indexType = 49, RULE_componentType = 50, RULE_recordType = 51, 
		RULE_fieldList = 52, RULE_fixedPart = 53, RULE_recordSection = 54, RULE_variantPart = 55, 
		RULE_tag = 56, RULE_variant = 57, RULE_setType = 58, RULE_baseType = 59, 
		RULE_fileType = 60, RULE_pointerType = 61, RULE_variableDeclarationPart = 62, 
		RULE_variableDeclaration = 63, RULE_procedureAndFunctionDeclarationPart = 64, 
		RULE_procedureOrFunctionDeclaration = 65, RULE_procedureDeclaration = 66, 
		RULE_formalParameterList = 67, RULE_formalParameterSection = 68, RULE_parameterGroup = 69, 
		RULE_identifierList = 70, RULE_constList = 71, RULE_functionDeclaration = 72, 
		RULE_resultType = 73, RULE_statement = 74, RULE_unlabelledStatement = 75, 
		RULE_simpleStatement = 76, RULE_assignmentStatement = 77, RULE_variable = 78, 
		RULE_expression = 79, RULE_relationaloperator = 80, RULE_simpleExpression = 81, 
		RULE_additiveoperator = 82, RULE_term = 83, RULE_multiplicativeoperator = 84, 
		RULE_signedFactor = 85, RULE_factor = 86, RULE_unsignedConstant = 87, 
		RULE_functionDesignator = 88, RULE_parameterList = 89, RULE_set_ = 90, 
		RULE_elementList = 91, RULE_element = 92, RULE_procedureStatement = 93, 
		RULE_actualParameter = 94, RULE_parameterwidth = 95, RULE_gotoStatement = 96, 
		RULE_emptyStatement_ = 97, RULE_empty_ = 98, RULE_structuredStatement = 99, 
		RULE_compoundStatement = 100, RULE_statements = 101, RULE_conditionalStatement = 102, 
		RULE_ifStatement = 103, RULE_caseStatement = 104, RULE_caseListElement = 105, 
		RULE_repetetiveStatement = 106, RULE_whileStatement = 107, RULE_repeatStatement = 108, 
		RULE_forStatement = 109, RULE_forList = 110, RULE_initialValue = 111, 
		RULE_finalValue = 112, RULE_withStatement = 113, RULE_recordVariableList = 114;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "programHeading", "identifier", "block", "classDeclarationPart", 
			"className", "visibilityBlock", "baseClassName", "classBlock", "visibilitySection", 
			"visibility", "classVarDeclaration", "methodBlock", "methodDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "classMethodDeclaration", 
			"classMethodImplementation", "constructorImplementation", "destructorImplementation", 
			"methodImplementation", "usesUnitsPart", "labelDeclarationPart", "label", 
			"constantDefinitionPart", "constantDefinition", "constantChr", "constant", 
			"unsignedNumber", "unsignedInteger", "unsignedReal", "sign", "bool_", 
			"string", "typeDefinitionPart", "typeDefinition", "functionType", "procedureType", 
			"type_", "simpleType", "scalarType", "subrangeType", "typeIdentifier", 
			"structuredType", "unpackedStructuredType", "stringtype", "arrayType", 
			"typeList", "indexType", "componentType", "recordType", "fieldList", 
			"fixedPart", "recordSection", "variantPart", "tag", "variant", "setType", 
			"baseType", "fileType", "pointerType", "variableDeclarationPart", "variableDeclaration", 
			"procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"procedureDeclaration", "formalParameterList", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "statements", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", "'CHAR'", 
			"'CHR'", "'CONST'", "'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", 
			"'FOR'", "'FUNCTION'", "'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", 
			"'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", 
			"'PROGRAM'", "'REAL'", "'RECORD'", "'REPEAT'", "'SET'", "'THEN'", "'TO'", 
			"'TYPE'", "'UNTIL'", "'VAR'", "'WHILE'", "'WITH'", "'CLASS'", "'PRIVATE'", 
			"'PUBLIC'", "'PROTECTED'", "'CONSTRUCTOR'", "'DESTRUCTOR'", "'INHERITS'", 
			"'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", "':'", "'='", "'<>'", 
			"'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", "'(.'", "']'", "'.)'", 
			"'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", "'INTERFACE'", "'USES'", 
			"'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "CONST", 
			"DIV", "DO", "DOWNTO", "ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", 
			"IF", "IN", "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", 
			"PROCEDURE", "PROGRAM", "REAL", "RECORD", "REPEAT", "SET", "THEN", "TO", 
			"TYPE", "UNTIL", "VAR", "WHILE", "WITH", "CLASS", "PRIVATE", "PUBLIC", 
			"PROTECTED", "CONSTRUCTOR", "DESTRUCTOR", "INHERITS", "PLUS", "MINUS", 
			"STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL", 
			"LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", "LBRACK2", "RBRACK", 
			"RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", 
			"INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", "WS", 
			"COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DelphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DelphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(DelphiParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			programHeading();
			setState(231);
			block();
			setState(232);
			match(DOT);
			setState(233);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<ClassDeclarationPartContext> classDeclarationPart() {
			return getRuleContexts(ClassDeclarationPartContext.class);
		}
		public ClassDeclarationPartContext classDeclarationPart(int i) {
			return getRuleContext(ClassDeclarationPartContext.class,i);
		}
		public List<ProcedureAndFunctionDeclarationPartContext> procedureAndFunctionDeclarationPart() {
			return getRuleContexts(ProcedureAndFunctionDeclarationPartContext.class);
		}
		public ProcedureAndFunctionDeclarationPartContext procedureAndFunctionDeclarationPart(int i) {
			return getRuleContext(ProcedureAndFunctionDeclarationPartContext.class,i);
		}
		public List<ConstructorImplementationContext> constructorImplementation() {
			return getRuleContexts(ConstructorImplementationContext.class);
		}
		public ConstructorImplementationContext constructorImplementation(int i) {
			return getRuleContext(ConstructorImplementationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(240);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 37383663845376L) != 0)) {
				{
				setState(238);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CLASS:
					{
					setState(235);
					classDeclarationPart();
					}
					break;
				case FUNCTION:
				case PROCEDURE:
					{
					setState(236);
					procedureAndFunctionDeclarationPart();
					}
					break;
				case CONSTRUCTOR:
					{
					setState(237);
					constructorImplementation();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(242);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DelphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(DelphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DelphiParser.RPAREN, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programHeading);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(243);
			match(PROGRAM);
			setState(244);
			identifier();
			setState(249);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(245);
				match(LPAREN);
				setState(246);
				identifierList();
				setState(247);
				match(RPAREN);
				}
			}

			setState(251);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
